[monorepo] update dependencies
directly use yup_oauth2 with google sheets api since the re-export doesn't include necessary features.

--- a/arenabuddy/arenabuddy/Cargo.toml
+++ b/arenabuddy/arenabuddy/Cargo.toml
@@ -31,10 +31,7 @@ tracingx = { path = "../../lib/tracingx" }
 tracing-appender = { workspace = true }
 
 [target.'cfg(target_os = "linux")'.dependencies]
-rfd = { workspace = true, default_features = false, features = [
-    "xdg-portal",
-    "tokio",
-] }
+rfd = { workspace = true, default_features = false, features = ["xdg-portal"] }
 
 [target.'cfg(not(target_os = "linux"))'.dependencies]
 rfd = { workspace = true }
