--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,7 +33,7 @@ bevy = { version = "0.17.3", features = ["file_watcher"] }
 bevy_framepace = { version = "0.20.1" }
 bevy-inspector-egui = "0.35.0"
 chrono = { version = "0.4.42", features = ["serde", "wasmbind"] }
-clap = { version = "4.5.53", features = ["derive"] }
+clap = { version = "4.5.54", features = ["derive"] }
 console_error_panic_hook = "0.1"
 console-subscriber = "0.5.0"
 csv = { version = "1.4.0" }
@@ -41,7 +41,7 @@ ctrlc = "3.5.1"
 derive_builder = "0.20.2"
 dioxus = { version = "0.7.2" }
 fastrand = "2.3.0"
-google-sheets4 = "6.0.0"
+google-sheets4 = { version = "7.0.0" }
 indoc = "2.0.7"
 itertools = "0.14.0"
 notify = "8.2.0"
@@ -53,7 +53,7 @@ prost-types = "0.14"
 rand = "0.9.2"
 rand_chacha = "0.9.0"
 regex = "1.12.2"
-rfd = { version = "0.16.0", default-features = false }
+rfd = { version = "0.17.1", default-features = false }
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.148"
 serde_yaml = "0.9"
@@ -65,7 +65,7 @@ sqlx = { version = "0.9.0-alpha.1", features = [
     "sqlx-toml",
 ] }
 thiserror = "2.0.17"
-tokio = { version = "1.48.0", features = ["full", "tracing"] }
+tokio = { version = "1.49.0", features = ["full", "tracing"] }
 tracing = "0.1.44"
 tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
 tracing-appender = "0.2.4"
@@ -78,6 +78,11 @@ reqwest = { version = "0.13.1", features = [
 rustyline = "17.0.2"
 urlencoding = "2.1.3"
 uuid = { version = "1.19.0", features = ["v4", "js"] }
+yup-oauth2 = { version = "12.1.1", features = [
+    "hyper-rustls",
+    "service-account",
+    "ring",
+] }
 
 # Define common profiles for all workspace members
 [profile.dev]
