--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ members = [
     "arenabuddy/data",
     "arenabuddy/arenabuddy",
     "life",
+    "sports",
 ]
 resolver = "3"
 
@@ -54,6 +55,8 @@ rand = "0.9.2"
 rand_chacha = "0.9.0"
 regex = "1.12.2"
 rfd = { version = "0.17.1", default-features = false }
+rust_decimal = { version = "1.39.0", features = ["db-postgres", "serde"] }
+scraper = "0.25.0"
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.149"
 serde_yaml = "0.9"
@@ -63,6 +66,7 @@ sqlx = { version = "0.9.0-alpha.1", features = [
     "postgres",
     "runtime-tokio",
     "sqlx-toml",
+    "rust_decimal",
 ] }
 thiserror = "2.0.17"
 tokio = { version = "1.49.0", features = ["full", "tracing"] }
@@ -86,7 +90,7 @@ yup-oauth2 = { version = "12.1.2", features = [
 
 # Define common profiles for all workspace members
 [profile.dev]
-opt-level = 1  # Basic optimizations for better debug performance
+opt-level = 1 # Basic optimizations for better debug performance
 
 # CI profile: inherits from dev but without dependency optimizations for faster builds
 # Usage in CI: cargo build --profile ci
