--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,7 +29,7 @@ license = "MIT or Apache-2.0"
 anyhow = "1.0.100"
 async-trait = "0.1"
 axum = "0.8.8"
-bevy = { version = "0.17.3", features = ["file_watcher"] }
+bevy = { version = "0.17.3" }
 bevy_framepace = { version = "0.20.1" }
 bevy-inspector-egui = "0.35.0"
 chrono = { version = "0.4.42", features = ["serde", "wasmbind"] }
