--- a/docker-local-monitoring/docker-compose.yml
+++ b/docker-local-monitoring/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   postgres:
     image: postgres:15-alpine
@@ -42,6 +40,47 @@ services:
     depends_on:
       - postgres
 
+  postgres_exporter:
+    image: prometheuscommunity/postgres-exporter:latest
+    container_name: local-postgres-exporter
+    restart: unless-stopped
+    environment:
+      DATA_SOURCE_NAME: "postgresql://postgres:postgres@postgres:5432/localdev?sslmode=disable"
+    ports:
+      - "30187:9187"
+    networks:
+      - monitoring
+    depends_on:
+      postgres:
+        condition: service_healthy
+
+  pgadmin:
+    image: dpage/pgadmin4:latest
+    container_name: local-pgadmin
+    restart: unless-stopped
+    environment:
+      PGADMIN_DEFAULT_EMAIL: admin@local.dev
+      PGADMIN_DEFAULT_PASSWORD: admin
+      PGADMIN_CONFIG_SERVER_MODE: 'False'
+      PGADMIN_CONFIG_MASTER_PASSWORD_REQUIRED: 'False'
+    ports:
+      - "30080:80"
+    volumes:
+      - pgadmin_data:/var/lib/pgadmin
+    networks:
+      - monitoring
+    depends_on:
+      - postgres
+
+  node_exporter:
+    image: prom/node-exporter:latest
+    container_name: local-node-exporter
+    restart: unless-stopped
+    ports:
+      - "30100:9100"
+    networks:
+      - monitoring
+
   grafana:
     image: grafana/grafana:latest
     container_name: local-grafana
@@ -71,6 +110,9 @@ volumes:
   grafana_data:
     driver: local
     name: local_grafana_data
+  pgadmin_data:
+    driver: local
+    name: local_pgadmin_data
 
 networks:
   monitoring:
