--- a/sports/baseballref/Cargo.toml
+++ b/sports/baseballref/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "sports"
+name = "baseballref"
 authors.workspace = true
 description.workspace = true
 categories.workspace = true
@@ -11,7 +11,6 @@ keywords.workspace = true
 license.workspace = true
 
 [dependencies]
-baseballref = {path = './baseballref'}
 anyhow.workspace = true
 chrono.workspace = true
 clap = { workspace = true, features = ["env"] }
