--- a/arenabuddy/core/Cargo.toml
+++ b/arenabuddy/core/Cargo.toml
@@ -13,7 +13,7 @@ license.workspace = true
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [build-dependencies]
-prost-build = { workspace = true, features = ["format"] }
+tonic-prost-build = { workspace = true }
 
 [dependencies]
 async-trait = { workspace = true }
@@ -27,6 +27,8 @@ multimap = { path = "../../lib/multimap" }
 notify = { workspace = true }
 prost = { workspace = true }
 prost-types = { workspace = true }
+tonic = { workspace = true }
+tonic-prost = { workspace = true }
 regex = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true }
