[arenabuddy] fixing buf lints

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ members = [
     "arenabuddy/server",
     "life",
     "sports",
-    "sports/baseballref"
+    "sports/baseballref",
 ]
 resolver = "3"
 
