--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,7 @@ license = "MIT or Apache-2.0"
 anyhow = "1.0.100"
 async-trait = "0.1"
 axum = "0.8.8"
+base64 = "0.22"
 bevy = { version = "0.18.0" }
 bevy_framepace = { version = "0.20.1" }
 bevy-inspector-egui = "0.36.0"
@@ -46,6 +47,7 @@ dioxus = { version = "0.7.3" }
 fastrand = "2.3.0"
 google-sheets4 = { version = "7.0.0" }
 indoc = "2.0.7"
+jsonwebtoken = "9.3"
 itertools = "0.14.0"
 notify = "8.2.0"
 open = "5.3"
@@ -64,6 +66,7 @@ rfd = { version = "0.17.2", default-features = false }
 rust_decimal = { version = "1.40.0", features = ["db-postgres", "serde"] }
 scraper = "0.25.0"
 serde = { version = "1.0.228", features = ["derive"] }
+sha2 = "0.10"
 serde_json = "1.0.149"
 serde_yaml = "0.9"
 sqlx = { version = "0.9.0-alpha.1", features = [
@@ -80,6 +83,7 @@ tracing = "0.1.44"
 tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
 tracing-appender = "0.2.4"
 reqwest = { version = "0.13.1", features = [
+    "form",
     "json",
     "stream",
     "query",
