--- a/arenabuddy/arenabuddy/Cargo.toml
+++ b/arenabuddy/arenabuddy/Cargo.toml
@@ -15,6 +15,8 @@ license.workspace = true
 arenabuddy_core = { path = "../core/" }
 arenabuddy_data = { path = "../data" }
 async-trait = { workspace = true }
+axum = { workspace = true }
+base64 = { workspace = true }
 chrono = { workspace = true }
 console-subscriber = { workspace = true, optional = true }
 dioxus = { workspace = true, features = ["desktop", "router"] }
@@ -22,13 +24,16 @@ itertools = { workspace = true }
 notify = { workspace = true }
 open = { workspace = true }
 postgresql_embedded = { workspace = true, features = ["bundled"] }
+rand = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true }
+sha2 = { workspace = true }
 start = { path = "../../lib/start" }
 thiserror = { workspace = true }
 tokio = { workspace = true, features = ["full", "tracing"] }
 tonic = { workspace = true }
 tracingx = { path = "../../lib/tracingx" }
+urlencoding = { workspace = true }
 tracing-appender = { workspace = true }
 
 [target.'cfg(target_os = "linux")'.dependencies]
