--- a/Cargo.toml
+++ b/Cargo.toml
@@ -65,6 +65,7 @@ regex = "1.12.3"
 rfd = { version = "0.17.2", default-features = false }
 rust_decimal = { version = "1.40.0", features = ["db-postgres", "serde"] }
 scraper = "0.25.0"
+self_update = { version = "0.42", default-features = false, features = ["archive-tar", "archive-zip", "compression-flate2", "compression-zip-deflate", "rustls"] }
 serde = { version = "1.0.228", features = ["derive"] }
 sha2 = "0.10"
 serde_json = "1.0.149"
