--- a/arenabuddy/arenabuddy/Cargo.toml
+++ b/arenabuddy/arenabuddy/Cargo.toml
@@ -25,6 +25,7 @@ notify = { workspace = true }
 open = { workspace = true }
 postgresql_embedded = { workspace = true, features = ["bundled"] }
 rand = { workspace = true }
+self_update = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true }
 sha2 = { workspace = true }
