--- a/Cargo.toml
+++ b/Cargo.toml
@@ -55,7 +55,7 @@ postgresql_embedded = { version = "0.20.0", features = ["bundled"] }
 prost = "0.14.3"
 prost-build = { version = "0.14.3", features = ["format"] }
 prost-types = "0.14.3"
-tonic = "0.14.3"
+tonic = { version = "0.14.3", features = ["tls-ring", "tls-native-roots"] }
 tonic-build = "0.14.3"
 tonic-prost = "0.14.3"
 tonic-prost-build = "0.14.3"
