--- a/arenabuddy/cli/Cargo.toml
+++ b/arenabuddy/cli/Cargo.toml
@@ -18,6 +18,7 @@ csv = { workspace = true }
 ctrlc = { workspace = true }
 prost = { workspace = true }
 reqwest = { workspace = true, features = ["json", "stream", "default-tls"] }
+rusqlite = { version = "0.36", features = ["bundled"] }
 rustyline = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true }
